160 size gap fixed

--- a/JetBlue_Caribbean_Vacation_route1/richLoads/CA_Vacation_R1_160x600_RL1/stylesRL1.css
+++ b/JetBlue_Caribbean_Vacation_route1/richLoads/CA_Vacation_R1_160x600_RL1/stylesRL1.css
@@ -33,8 +33,8 @@ video {
 
 #main_content {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 1px;
+  left: 1px;
   width: 160px;
   height: 600px;
 }
